--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <!--Defined color-->
+    <color name="login_background_orange">#ff8a65</color>
+    <color name="login_button_orange">#F4511E</color>
 </resources>
+
