--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppThem.NoActionBar" parent="AppTheme">
+        <item name="windowActionBar">false</item>
+    </style>
 </resources>
