--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,84 +6,93 @@
             android:fitsSystemWindows="true"
             android:background="@color/login_background_orange">
 
-    <LinearLayout
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingTop="56dp"
-        android:paddingLeft="24dp"
-        android:paddingRight="24dp">
-
-        <ImageView
-            android:layout_width="96dp"
-            android:layout_height="96dp"
-            android:src="@drawable/login_cover_image"
-            android:layout_gravity="center_horizontal"/>
-
-        <android.support.design.widget.TextInputLayout
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/til_email">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingTop="56dp"
+            android:paddingLeft="24dp"
+            android:paddingRight="24dp">
 
-            <EditText
-                android:id="@+id/et_email"
+            <ImageView
+                android:layout_width="96dp"
+                android:layout_height="96dp"
+                android:src="@drawable/login_cover_image"
+                android:layout_gravity="center_horizontal"/>
+
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/promt_emails"/>
-        </android.support.design.widget.TextInputLayout>
+                android:id="@+id/til_email">
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/til_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <EditText
-                android:id="@+id/et_password"
+                <EditText
+                    android:id="@+id/et_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/promt_emails"/>
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/til_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <EditText
+                    android:id="@+id/et_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:hint="@string/promt_password"
+                    android:layout_marginBottom="16dp"/>
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/btn_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:hint="@string/promt_password"
-                android:layout_marginBottom="16dp"/>
-        </android.support.design.widget.TextInputLayout>
+                android:background="@color/login_button_orange"
+                android:text="@string/login"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Or"
+                android:textSize="20sp"
+                android:textColor="#50000000"
+                android:layout_gravity="center"
+                android:padding="@dimen/medium_padding"/>
 
-        <android.support.v7.widget.AppCompatButton
-            android:id="@+id/btn_login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/login_button_orange"
-            android:text="@string/login"/>
-        <TextView
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/btn_login_with_google"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/login_with_google"
+                android:background="@color/login_button_orange"/>
+
+            <TextView
+                android:id="@+id/tv_sign_up"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="24dp"
+                android:textSize="16sp"
+                android:textColor="@android:color/white"
+                android:text="@string/don_t_have_account_signup_now"
+                android:clickable="true"
+                android:layout_marginBottom="72dp"/>
+
+
+
+        </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/pbLoading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Or"
-            android:textSize="20sp"
-            android:textColor="#50000000"
-            android:layout_gravity="center"
-            android:padding="@dimen/medium_padding"/>
-
-        <android.support.v7.widget.AppCompatButton
-            android:id="@+id/btn_login_with_google"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/login_with_google"
-            android:background="@color/login_button_orange"/>
-
-        <TextView
-            android:id="@+id/tv_sigb_up"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="24dp"
-            android:textSize="16sp"
-            android:textColor="@android:color/white"
-            android:text="@string/don_t_have_account_signup_now"
-            android:clickable="true"
-            android:layout_marginBottom="72dp"/>
-
-
-
-    </LinearLayout>
-
-
-
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:visibility="gone"/>
+    </FrameLayout>
 
 </ScrollView>
