--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:paddingTop="56dp"
+            android:paddingTop="48dp"
             android:paddingLeft="24dp"
             android:paddingRight="24dp">
 
@@ -55,6 +55,13 @@
                 android:layout_height="wrap_content"
                 android:background="@color/login_button_orange"
                 android:text="@string/login"/>
+            <TextView
+                android:id="@+id/tv_forget_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/forget_password"
+                android:textSize="16sp"
+                android:paddingTop="8dp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
