--- a/app/src/main/res/layout/dialog_fragment_signup.xml
+++ b/app/src/main/res/layout/dialog_fragment_signup.xml
@@ -1,27 +1,19 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            android:background="#ACCBD0">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true">
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="300dp"
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingTop="56dp"
+            android:paddingTop="24dp"
             android:paddingLeft="24dp"
             android:paddingRight="24dp">
-
-            <ImageView
-                android:layout_width="96dp"
-                android:layout_height="96dp"
-                android:src="@drawable/login_cover_image"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="32dp"/>
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
@@ -77,7 +69,7 @@
                 android:id="@+id/btn_signup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#20c4c8"
+                android:background="@color/login_button_orange"
                 android:text="@string/sign_up"/>
         </LinearLayout>
 
