--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,7 @@
             android:layout_height="match_parent"
             tools:context="com.minhnpa.coderschool.a9boarding.fragment.LoginFragment"
             android:fitsSystemWindows="true"
-            android:background="@color/login_background_orange">
+            android:background="#ACCBD0">
 
 
     <FrameLayout
@@ -53,13 +53,14 @@
                 android:id="@+id/btn_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/login_button_orange"
+                android:background="#20c4c8"
                 android:text="@string/login"/>
             <TextView
                 android:id="@+id/tv_forget_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/forget_password"
+                android:textColor="#070707"
                 android:textSize="16sp"
                 android:paddingTop="8dp"/>
             <TextView
@@ -67,7 +68,7 @@
                 android:layout_height="wrap_content"
                 android:text="Or"
                 android:textSize="20sp"
-                android:textColor="#50000000"
+                android:textColor="#90000000"
                 android:layout_gravity="center"
                 android:padding="@dimen/medium_padding"/>
 
@@ -76,7 +77,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/login_with_google"
-                android:background="@color/login_button_orange"/>
+                android:background="#20c4c8"/>
 
             <TextView
                 android:id="@+id/tv_sign_up"
@@ -85,13 +86,10 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="24dp"
                 android:textSize="16sp"
-                android:textColor="@android:color/white"
+                android:textColor="@android:color/black"
                 android:text="@string/don_t_have_account_signup_now"
                 android:clickable="true"
                 android:layout_marginBottom="72dp"/>
-
-
-
         </LinearLayout>
 
         <ProgressBar
