--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,10 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="medium_padding">16dp</dimen>
+    <dimen name="text_size_medimum">16sp</dimen>
+    <dimen name="padding_small">8dp</dimen>
+    <dimen name="margin_small">8dp</dimen>
+    <dimen name="circle_btn_height">44dp</dimen>
+    <dimen name="margin_tini">4dp</dimen>
+    <dimen name="text_size_medimum_2">24sp</dimen>
 </resources>
