--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,10 @@
     <color name="login_button_orange">#F4511E</color>
 
     <color name="toolbar_background">#ACCBD0</color>
+
+    <!--Main activity-->
+    <!--TabMain-->
+    <color name="tab_active">#FF5252</color>
+    <color name="transparent">#00FFFFFF</color>
 </resources>
 
