--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -2,14 +2,42 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <LinearLayout
+        android:orientation="horizontal"
+        android:id="@+id/lnHeaderItem"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="@dimen/padding_post_item">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="@dimen/size_avatar_post_item"
+            android:layout_height="@dimen/size_avatar_post_item"
+            android:src="@drawable/ic_avatar_tmp"
+            app:civ_border_width="1dp"
+            />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/tvUserName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Dang Fiztssi"
+                android:textColor=""
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
 
     </LinearLayout>
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvPhoto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
@@ -17,6 +45,8 @@
     </android.support.v7.widget.RecyclerView>
 
     <LinearLayout
+        android:orientation="vertical"
+        android:id="@+id/lnInforItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
