--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -1,54 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:id="@+id/lnHeaderItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/padding_post_item">
+        android:orientation="horizontal">
 
         <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imgAvatar"
             android:layout_width="@dimen/size_avatar_post_item"
             android:layout_height="@dimen/size_avatar_post_item"
+            android:layout_marginRight="@dimen/margin_between_item"
             android:src="@drawable/ic_avatar_tmp"
-            app:civ_border_width="1dp"
-            />
+            app:civ_border_width="1dp" />
+
         <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/margin_between_item"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
             <TextView
                 android:id="@+id/tvUserName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Dang Fiztssi"
-                android:textColor=""
-                />
+                android:textColor="@android:color/black"
+                tools:text="Dang Fiztssi" />
+
             <TextView
+                android:id="@+id/tvLocation"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                tools:text="TB Dis TP HCM" />
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/tvTimeStamp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="1h ago" />
+
     </LinearLayout>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvPhoto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        android:layout_marginBottom="@dimen/margin_between_item"
+        android:layout_marginTop="@dimen/margin_between_item">
 
     </android.support.v7.widget.RecyclerView>
 
+    <TextView
+        android:id="@+id/tvPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="@dimen/margin_between_item"
+        android:layout_marginTop="@dimen/margin_between_item"
+        android:background="@drawable/background_price"
+        android:paddingBottom="8dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="8dp"
+        android:textColor="@android:color/white"
+        tools:text="50$ per month" />
+
     <LinearLayout
-        android:orientation="vertical"
-        android:id="@+id/lnInforItem"
+
+        android:id="@+id/lnControlButtons"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnComment"
+            android:layout_width="@dimen/size_buttons_control"
+            android:layout_height="@dimen/size_buttons_control"
+            android:layout_margin="@dimen/margin_between_buttons_control"
+            android:background="@drawable/ic_comment" />
+
+        <Button
+            android:id="@+id/btnShare"
+            android:layout_width="@dimen/size_buttons_control"
+            android:layout_height="@dimen/size_buttons_control"
+            android:layout_margin="@dimen/margin_between_buttons_control"
+            android:background="@drawable/ic_share" />
+
+        <Button
+            android:id="@+id/btnBookmark"
+            android:layout_width="@dimen/size_buttons_control"
+            android:layout_height="@dimen/size_buttons_control"
+            android:layout_margin="@dimen/margin_between_buttons_control"
+            android:background="@drawable/ic_bookmark" />
 
     </LinearLayout>
 
