--- a/app/src/main/res/layout/fragment_bookmark.xml
+++ b/app/src/main/res/layout/fragment_bookmark.xml
@@ -2,8 +2,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+              android:orientation="vertical"
     tools:context="com.minhnpa.coderschool.a9boarding.fragment.main.BookmarkFragment">
 
+    <Button
+        android:layout_marginTop="100dp"
+        android:id="@+id/post_new"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Post New"
+        android:textAllCaps="false"/>
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:gravity="center"
