--- a/app/src/main/res/layout/fragment_create_post.xml
+++ b/app/src/main/res/layout/fragment_create_post.xml
@@ -22,6 +22,23 @@
                 app:titleTextColor="@android:color/white"
                 android:background="@color/toolbar_background"/>
 
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:background="#60000000">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_list_images"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+                <ImageView
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_camera_alt"/>
+
+            </FrameLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -41,6 +58,7 @@
                     android:padding="@dimen/padding_small"/>
 
                 <EditText
+                    android:id="@+id/et_price"
                     android:layout_width="0dp"
                     android:layout_weight="4"
                     android:layout_height="44dp"
@@ -66,6 +84,7 @@
                     android:padding="@dimen/padding_small"/>
 
                 <EditText
+                    android:id="@+id/et_num_m2"
                     android:layout_width="0dp"
                     android:layout_weight="4"
                     android:layout_height="44dp"
@@ -89,11 +108,13 @@
                     android:padding="@dimen/margin_small"/>
 
                 <EditText
+                    android:id="@+id/et_address"
                     android:layout_width="wrap_content"
                     android:layout_height="44dp"
                     android:hint="Address"
                     android:layout_toRightOf="@id/tv_address"
                     android:layout_alignRight="@+id/iv_place"/>
+
                 <ImageButton
                     android:id="@+id/iv_place"
                     android:layout_width="@dimen/circle_btn_height"
@@ -120,6 +141,7 @@
                     android:padding="@dimen/padding_small"/>
 
                 <EditText
+                    android:id="@+id/et_phone"
                     android:layout_width="0dp"
                     android:layout_weight="4"
                     android:layout_height="44dp"
@@ -128,6 +150,7 @@
             </LinearLayout>
 
             <EditText
+                android:id="@+id/et_description"
                 android:background="#f6f7f8"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
