--- a/app/src/main/res/menu/menu_new_post.xml
+++ b/app/src/main/res/menu/menu_new_post.xml
@@ -3,7 +3,7 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/ic_next"
+        android:id="@+id/action_next"
         android:title="Next"
         android:icon="@drawable/ic_arrow_forward"
         app:showAsAction="ifRoom"/>
