--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,8 +2,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.minhnpa.coderschool.a9boarding.fragment.main.HomeFragment">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Home Fragment"
+        android:textSize="20sp"
+        android:gravity="center_horizontal"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvMain"
         android:layout_width="match_parent"
@@ -15,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
-        android:layout_margin="?attr/actionBarSize" />
+        android:layout_margin="?attr/actionBarSize"
+        />
 
 </FrameLayout>
