--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -10,6 +10,14 @@
 
         <!--ff8a65-->
     </style>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="actionModeBackground">@android:color/black</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">false</item>
+    </style>
 
     <style name="AppTheme.NoActionBar.NoTranslucent" parent="AppTheme.NoActionBar">
         <item name="android:windowTranslucentStatus">false</item>
