--- a/app/src/main/res/layout/fragment_create_post.xml
+++ b/app/src/main/res/layout/fragment_create_post.xml
@@ -25,16 +25,13 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:background="#60000000">
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/rv_list_images"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                android:background="#60000000"
+                android:layout_margin="8dp">
                 <ImageView
+                    android:id="@+id/iv_camera"
                     android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:src="@drawable/ic_camera_alt"/>
 
             </FrameLayout>
