--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.minhnpa.coderschool.a9boarding.fragment.main.HomeFragment">
 
     <android.support.v7.widget.RecyclerView
@@ -15,6 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
-        android:layout_margin="?attr/actionBarSize" />
+        android:layout_margin="?attr/actionBarSize"
+        />
 
 </FrameLayout>
