--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -10,7 +10,9 @@
         android:id="@+id/lnHeaderItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingRight="@dimen/padding_post_item"
+        android:paddingLeft="@dimen/padding_post_item">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imgAvatar"
@@ -49,14 +51,13 @@
 
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvPhoto"
+    <ImageView
+        android:id="@+id/ivPhoto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:layout_marginBottom="@dimen/margin_between_item"
-        android:layout_marginTop="@dimen/margin_between_item">
-
-    </android.support.v7.widget.RecyclerView>
+        android:layout_marginTop="@dimen/margin_between_item"
+        android:scaleType="centerCrop"/>
 
     <TextView
         android:id="@+id/tvPrice"
@@ -103,5 +104,11 @@
             android:background="@drawable/ic_bookmark" />
 
     </LinearLayout>
+
+    <View
+        android:layout_margin="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"/>
 
 </LinearLayout>
