--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,8 +16,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
-        android:layout_margin="?attr/actionBarSize"
-        android:src="@drawable/ic_add"
-        />
-
+        android:layout_margin="?attr/actionBarSize"/>
 </FrameLayout>
