--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,26 +2,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.minhnpa.coderschool.a9boarding.fragment.main.HomeFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvMain"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
-<<<<<<< HEAD
-        android:layout_margin="?attr/actionBarSize"/>
-=======
         android:layout_margin="?attr/actionBarSize"
-        android:src="@drawable/ic_add"
-        />
-
->>>>>>> origin/develop
+        android:src="@drawable/ic_add" />
 </FrameLayout>
