--- a/app/src/main/res/menu/items_right_menu.xml
+++ b/app/src/main/res/menu/items_right_menu.xml
@@ -3,8 +3,7 @@
 
     <item
         android:id="@+id/nav_signin"
-        android:title="@string/sign_in"
-        />
+        android:title="@string/sign_in"/>
 
     <item
         android:id="@+id/nav_signout"
