--- a/app/src/main/res/layout/fragment_bookmark.xml
+++ b/app/src/main/res/layout/fragment_bookmark.xml
@@ -6,10 +6,12 @@
     tools:context="com.minhnpa.coderschool.a9boarding.fragment.main.BookmarkFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:gravity="center"
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvNotification"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="bookmark fragment" />
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
