--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,5 +20,11 @@
     <style name="AppTheme.NoActionBar.NoTranslucent" parent="AppTheme.NoActionBar">
     </style>
 
+    <style name="TextViewProfileStyle">
+        <item name="android:textSize">24sp</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
+        <item name="android:padding">24dp</item>
+    </style>
+
 
 </resources>
