--- a/app/src/main/res/layout/activity_view_and_edit_profile.xml
+++ b/app/src/main/res/layout/activity_view_and_edit_profile.xml
@@ -48,7 +48,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <TextView
+                android:id="@+id/tv_user_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Bao Huynh"
@@ -144,11 +146,11 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Address 1"
+                        android:text="Address"
                         android:textSize="20sp"/>
 
                     <TextView
-                        android:id="@+id/tv_address1"
+                        android:id="@+id/tv_address"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         tools:text="ly thuong kiet"
@@ -164,35 +166,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="0.5dp"
                     android:background="#40000000"/>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="16dp">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Address 2"
-                        android:textSize="20sp"/>
-
-                    <TextView
-                        android:id="@+id/tv_address2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        tools:text="1099/20 hem 111le thi rieng, quan 10, tp hcm"
-                        android:layout_alignParentRight="true"
-                        android:textColor="@android:color/holo_red_dark"
-                        android:textSize="20sp"
-                        android:maxLines="1"
-                        android:maxLength="20"
-                        android:ellipsize="end"
-                        android:clickable="true"/>
-                </RelativeLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
-                    android:background="#40000000"/>
-
             </LinearLayout>
 
 
